--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 dj-rest-auth==2.1.7
 Django==3.2.4
 django-allauth==0.44.0
+django-filter==2.4.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.1
 idna==2.10
